# med-llm-bench

./: .gitignore  Dockerfile  deucalion_test_run.sh  multi_model_orchestration.sh  multi_node_vllm.sh  offline_vllm.sh  pyproject.toml  requirements.txt  serve_vllm.sh  vllm_serve.sh
.devcontainer/: devcontainer.json
configs/datasets/: biolaysumm.yaml  medcalcbench.yaml  medcalcbenchverified.yaml  medcasemcq.yaml  medcasereasoning.yaml  medqa.yaml  medxpertqa.yaml  meqsum.yaml  pubmedsum.yaml  template.yaml
configs/metrics/: cognitive.mcq.yaml  cognitive.template.yaml  systems.yaml
configs/models/: llama3_8b_instruct.yaml  mistral_7b_instruct_v03.yaml  phi3_mini_4k_instruct.yaml  qwen2_5_3b_instruct.yaml  qwen3_32b_awq.yaml
configs/prompts/: cdkr.yaml  mcq_default.yaml
configs/runtime/: telemetry.auto.yaml  telemetry.yaml
configs/tasks/: cdkr.yaml  template.yaml
deprecated/: medcasereasoning_loader.py  medqa_loader.py  medxpertqa_loader.py  meqsum_loader.py
llm_bench/: __init__.py
llm_bench/backends/: __init__.py  base_backend.py  openai_backend.py
llm_bench/formatters/: __init__.py  base_formatter.py  generative_formatter.py  mcq_formatter.py
llm_bench/ingestion/: __init__.py  base_loader.py  yaml_loader.py
llm_bench/metrics/: __init__.py  answer_extraction.py  cognitive_calculator.py  stats.py  systems_calculator.py
llm_bench/prompt/: base_formatter.py  generative_formatter.py  mcq_formatter.py
scripts/: cdkr_test_run.py  download_hf_models.sh  multi_model_orchestrator.py  pretty_print_systems_summaries.py  test_run.py  vllm_manager.py
(+55 files in other folders)
